--- a/source/css/style.css
+++ b/source/css/style.css
@@ -25,6 +25,11 @@ body {
     font-family: Inconsolata, "Courier New", monospace;
     margin-bottom: 50px;
 }
+@media(max-width: 344px) {
+    body {
+        padding-top: 100px;
+    }
+}
 
 .modal-body{
     padding: 15px;
@@ -160,4 +165,13 @@ a:hover {
     background-color: #000000;
     width: 100%;
     height: 100%;
+}
+
+.has-error .form-control {
+		border-width: 3px;
+}
+.help-block {
+	font-size:8pt;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
