--- a/source/css/style.css
+++ b/source/css/style.css
@@ -141,30 +141,34 @@ a:hover {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    
     height: 50px;
     background-color: #000;
+}
+
+#democanvas canvas {
+    width: 100%;
+    max-width: 633px;
 }
 
 #democanvas:-moz-full-screen,
 #democanvas:-moz-full-screen canvas {
     background-color: #000000;
-    width: 100%;
     height: 100%;
+    max-width: 100% !important;
 }
 
 #democanvas:-webkit-full-screen,
 #democanvas:-webkit-full-screen canvas {
     background-color: #000000;
-    width: 100%;
     height: 100%;
+    max-width: 100% !important;
 }
 
 #democanvas:fullscreen,
 #democanvas:fullscreen canvas {
     background-color: #000000;
-    width: 100%;
     height: 100%;
+    max-width: 100% !important;
 }
 
 .has-error .form-control {
