--- a/source/css/template.css
+++ b/source/css/template.css
@@ -164,13 +164,11 @@ body{
   padding: 5px;
   color: #000;
   font-size: 10px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  width: 400px;
   display: none;
   z-index: 999;
-  /* padding: 0 20px;
-  */
+  position: relative;
+  margin: 0 auto;
 }
 
 .description h2 {
@@ -179,7 +177,7 @@ body{
 	text-transform: uppercase; 
 }
 
-.description:after{
+/*.description:after{
     content:'';
     position:absolute;
     bottom:-10px;
@@ -193,7 +191,7 @@ body{
     -moz-transform:rotate(45deg);
     -webkit-transform:rotate(45deg);
     transform:rotate(45deg);
-}
+}*/
 
 .description p {
 	font-family: "Arial";
