--- a/source/css/template.css
+++ b/source/css/template.css
@@ -17,6 +17,7 @@ html, body{
 }
 
 body{
+	height: 100%;
 	background: url('/images/background.jpg') repeat-x;
 	background-color: #36e5e1;
 	font-family: SuperMario;
@@ -227,4 +228,14 @@ a:hover .description{
 .center {
 	font-family: SuperMario;
 	text-align: center;
+}
+
+#login, #logintest {
+	margin: 10px;
+	padding: 10px;
+	border: #FFF 5px dotted;
+}
+
+#result_login {
+	margin-top: 100px;
 }
