--- a/source/css/ranking.css
+++ b/source/css/ranking.css
@@ -20,24 +20,41 @@
     font-weight: 400;
 }
 
-body{
-	font-family: amiga;
-	background-size: cover;
-	background-color: #000;
-	color: #fff;
+html, body{
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
-h1{
+body{
+	height: 100%;
+	font-family: amiga;
+	background: url('/images/background.jpg') repeat-x;
+	background-color: #36e5e1;
+	color: #333;
+}
+
+h1 {
 	font-family: ;
 	color: #fff100;
 	font-size: 3em;
 	padding-bottom: 20px;
 }
 
+h1 a, h1 a:hover {
+	color: #fff100;
+	text-decoration: underline;
+}
+
+.wrapper {
+	z-index: 100;
+}
+
 ul{
 	list-style-type: none;
 	border-bottom: 2px solid;
 	overflow: hidden;
+	z-index: 100;
 }
 
 ul.header{
@@ -47,7 +64,7 @@ ul.header{
 li{
 	display: block;
 	float: left;
-	padding: 10px;
+	padding: 5px;
 }
 
 ul li:first-child{
@@ -55,7 +72,7 @@ ul li:first-child{
 }
 
 ul li:nth-child(2){
-	width: 60%;
+	width: 50%;
 }
 
 ul li:nth-child(3){
@@ -63,7 +80,7 @@ ul li:nth-child(3){
 }
 
 ul li:nth-child(4){
-	width: 15%;
+	width: 25%;
 }
 
 .image-points::before{
@@ -81,4 +98,37 @@ ul li:nth-child(4){
 .page-header{
 	border-bottom: none;
 	text-align: center;
+}
+
+#cloud1{
+	position: absolute;
+	top: 125px;
+	left: 5px;
+}
+
+#cloud2{
+	position: absolute;
+	top: 60px;
+	left: 230px;
+}
+
+#sun{
+	position: absolute;
+	right: 50px;
+	top: 120px;
+}
+
+#trees{
+	background: url('/images/trees.png') repeat-x;
+	width: 100%;
+	height: 30px;
+	z-index: 1;
+}
+
+#floor{
+	position: absolute;
+	background: url('/images/floor.jpg') repeat-x;
+	width: 100%;
+	height: 78px;
+	z-index: 3;
 }
