--- a/source/css/template.css
+++ b/source/css/template.css
@@ -88,6 +88,7 @@ body{
 	width: 100%;
 	height: 78px;
 	z-index: 3;
+	display: inline-block;
 }
 
 #content {
@@ -134,6 +135,7 @@ body{
 	padding-top: 10px;
 	text-align: center;
 	margin: 0 auto;
+	z-index: 999;	
 }
 
 #trees{
@@ -237,5 +239,67 @@ a:hover .description{
 }
 
 #result_login {
-	margin-top: 100px;
+	margin-top: 100px ;
+}
+
+#position a, #position a:hover {
+	color: yellow;
+	text-decoration: none;
+}
+
+#hints {
+	background-color: rgba(147,147,147,0.8);
+	color: #000;
+	height: 70%;
+	width: 60%;
+	margin: 23px auto 0px;
+}
+
+#hints_list {
+	margin: 0;
+	overflow-y: scroll;
+	height: 100%;
+}
+
+#hints_list li {
+	font-family: Arial;
+	font-weight: 700;
+	list-style-type: none;
+	font-size: 9pt;
+	padding:0;
+}
+
+#hints_list li:before {
+	content: "\00BB \0020";}
+
+.team {
+	color: yellow;
+}
+
+.global {
+	color: #FFF;
+}
+
+#legend {
+	position: absolute;
+	top: 120px;
+	display: block;
+	margin: 0;
+}
+
+#legend div {
+	display: block;
+}
+
+#legend img {
+	width: 34px;
+}
+
+#credits {
+	font-family: Arial;
+	font-size: 8pt;
+	font-weight: 700;
+	position:absolute;
+	bottom: 10px;
+	right: 5px;
 }
