--- a/source/css/template.css
+++ b/source/css/template.css
@@ -22,12 +22,21 @@ input {
 
 body{
 	height: 100%;
-	background: url('/images/background.jpg') repeat-x;
+	background: url('/images/bk.png');
+	background-repeat: repeat-x;
 	background-color: #36e5e1;
+	background-position: 0px 0px;
 	font-family: SuperMario;
 	color: #fff;
+	animation: daynight_bk 100s infinite;
 }
 
+@keyframes daynight_bk {
+    0%   {background-position: 0px 0px;}
+    50% {background-position: 0px -2400px;}
+    100%   {background-position: 0px 0px;}
+
+}
 .challenge_layout1, .challenge_layout2, .step_layout, .column_small, .column_medium, .column_large, .column_laterale{
 	position: absolute;
 	z-index: 2;
@@ -123,10 +132,69 @@ body{
 	bottom: 68px;
 }
 
+#stars{
+	position: absolute;
+	width: 100%;
+	height: 400px;
+	left: 0px;
+	top: 0px;
+	background: url('/images/stars.png');
+	background-repeat: repeat-x;
+	background-position: 0px 0px;
+	opacity: 1.0;
+	animation: daynight_stars 100s infinite;
+}
+
+@keyframes daynight_stars {
+    0%     {opacity: 1.0;}
+    50%    {opacity: 0;}
+    100%   {opacity: 1.0;}
+
+}
+
+
 #sun{
+	position: absolute;
+	width: 150px;
+	height: 500px;
+	right: 50px;
+	top: 120px;
+	background: url('/images/sun.png');
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+	animation: daynight_sun 100s infinite;
+}
+
+@keyframes daynight_sun {
+    0%     {background-position: 0px 1000px;}
+    50%    {background-position: 0px 0px;}
+    100%   {background-position: 0px 1000px;}
+
+}
+
+#clouds{
 	position: absolute;
 	right: 50px;
 	top: 120px;
+}
+
+
+#moon{
+	position: absolute;
+	width: 60px;
+	height: 500px;
+	right: 50px;
+	top: 120px;
+	background: url('/images/moon.png');
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+	animation: daynight_moon 100s infinite;
+}
+
+@keyframes daynight_moon {
+    0%     {background-position: 0px 0px;}
+    50%    {background-position: 0px 1000px;}
+    100%   {background-position: 0px 0px;}
 }
 
 #player{
