--- a/source/css/ranking.css
+++ b/source/css/ranking.css
@@ -34,6 +34,10 @@ body{
 	color: #333;
 }
 
+.container {
+	height: 84.8%;
+}
+
 ul {
 	margin: 0px;
 }
@@ -190,14 +194,22 @@ right: 0;
 	text-align: center;
 }
 
-#credits {
-	font-family: Arial;
-	font-size: 6pt;
-	font-weight: 400;
+#credits_id {
 	position:absolute;
-	width: 15%;
-	color: #FFF;
 	bottom: 0;
 	right: 0;
-	background: rgba(147,147,147,0.6);
+	width: 40px;
+}
+
+#credits_text {
+	font-family: Arial;
+	font-size: 8pt;
+	font-weight: 400;
+	color: #FFF;
+	position:absolute;
+	right: 10px;
+	bottom: 50px;
+	background-color: rgba(147,147,147,0.8);
+	border: solid 3px #000;
+	padding: 5px;
 }
